...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.708">

                <TextView
                    android:id="@+id/textViewUrgencyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_4"
                    android:layout_marginBottom="@dimen/layout_4"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
...
                    android:text="@string/normal"
                    android:textSize="18sp"
                    android:theme="@style/CustomRadioButton3" />
            </RadioGroup>

            <Button
                android:id="@+id/btnNext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_15"
                android:layout_marginBottom="@dimen/layout_15"
                android:backgroundTint="@color/bluish"
                android:onClick="createJob"
...
