...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="@dimen/textInput" />

            <Button
                android:id="@+id/btnNext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_15"
                android:layout_marginBottom="@dimen/layout_15"
                android:backgroundTint="@color/bluish"
                android:onClick="nextPage"
...
